# CS4140

./: .gitignore  LICENSE  embedded_ai.code-workspace  readme.md
Training/: drone-classification.ipynb
camera-capture_cpp/: CMakeLists.txt
camera-capture_cpp/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
camera-capture_cpp/src/: main.cpp  tft_display.h
camera-image-gathering/: CMakeLists.txt  prj.conf
camera-image-gathering/src/: fifo.c  main.c  uart_img_send.c  uart_img_send.h
camera-preprocessing_cpp/: CMakeLists.txt  prj.conf
camera-preprocessing_cpp/src/: main.cpp  uart_img_send.h
camera-show-on-screen/: CMakeLists.txt  README.md  prj.conf
camera-show-on-screen/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
camera-show-on-screen/src/: fifo.c  fifo.h  main.c  ov7670_fifo.c  ov7670_fifo.h  ov7670_regs.h
collision-cleanup/: Program.cs
collision-sameset/: Program.cs  collision-sameset.sln
documentation/: .$Model_architecture.drawio.bkp  Model_architecture.drawio  claud prompts image labeling.txt
drone_inference_base/: CMakeLists.txt  Kconfig  prj.conf
drone_inference_base/src/: drone_model_ptq_int8.h  drone_model_qat_int8.h  inference.cc  inference.h  main.c  model_drone_detector_ptq_drone_int8.h  model_ptq_drone_int8.h
image-labeler/: .gitignore  App.xaml  App.xaml.cs  ImageLabeler.csproj  MainWindow.xaml  MainWindow.xaml.cs  image-labeler.sln
send-image-to-computer/: CMakeLists.txt  README.md  prj.conf
train/: .gitignore  drone-classification.ipynb  drone-classification_prerun.ipynb  drone_classification (2).ipynb  drone_classification.ipynb
(+80 files in other folders)
